fix spacing issues on mobile case study

--- a/app/assets/stylesheets/responsive.css.sass
+++ b/app/assets/stylesheets/responsive.css.sass
@@ -117,6 +117,15 @@
 
   .headline__buzzword--casestudy
     line-height: 1em
+    font-size: 40px
+
+  .headline__buzzword
+    padding-top: 20px
+  .hero__header--animated, .hero__header--brand1
+    margin: 0 -6px
+
+  .hero--featured
+    height: 100%
 //iPad and down
 @media only screen and (max-width : 1024px)
   .post__avatar
